<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="Gedung"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:text="FASILKOM-TI"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/textHello"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="@id/textHello"
            app:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textHello"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/viewDivider"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="vertical"
                android:padding="15dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Gedung S1 Ilmu Komputer<-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. Gedung S1 Ilmu Komputer"
                    android:textStyle="bold"
                    android:textSize="10pt"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="380dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:contentDescription="Fasilkom-Ti"
                    android:src="@drawable/s1ilkom"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gedungs1Ilkom"
                    android:layout_marginTop="15dp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:justificationMode="inter_word"/>

                <!-- Gedung S1 Teknologi Informasi <-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2. Gedung S1 Teknologi Informasi"
                    android:textStyle="bold"
                    android:textSize="10pt"
                    android:layout_marginTop="22dp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="380dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:contentDescription="Fasilkom-Ti"
                    android:src="@drawable/s1ti"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gedungs1TI"
                    android:layout_marginTop="15dp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:justificationMode="inter_word"/>

                <!-- Gedung S2, S3 FASILKOM-TI <-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3. Gedung S2, S3 FASILKOM-TI"
                    android:textStyle="bold"
                    android:textSize="10pt"
                    android:layout_marginTop="22dp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="380dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:contentDescription="Fasilkom-Ti"
                    android:src="@drawable/s2ti"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gedungs2fasilkom"
                    android:layout_marginTop="15dp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:justificationMode="inter_word"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation_menu"/>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"/>

</androidx.constraintlayout.widget.ConstraintLayout>